# rustfoo-2

./: .gitignore  README.md  foobar.tgz.gpg
benchmarkfoo/: Cargo.toml
benchmarkfoo/benches/: my_benchmark.rs
benchmarkfoo/src/: lib.rs
bzipper-rust/: .project  Cargo.toml  README.md
bzipper-rust/src/: main.rs
c-compat-abi-in-rust-for-others/: Cargo.toml  build.rs  rustfmt.toml
c-compat-abi-in-rust-for-others/src/: lib.rs
c-compat-abi-in-rust-for-others/src/py-ffi/: main.py
c-compat-abi-in-rust-for-others/src/rustmod/: Makefile  entrypoint.c  entrypoint.h  mod.rs
faststat/: Cargo.toml
faststat-hybrid/: Cargo.toml
faststat-hybrid/src/: main.rs
faststat-native-thread/: Cargo.toml
faststat-native-thread/src/: main.rs
faststat/src/: main.rs
file2db/: Cargo.toml
file2db/src/: main.rs
hyperscan-foo/: Cargo.toml  README.md
hyperscan-foo/src/: main.rs
kdtree-foo/: Cargo.toml
kdtree-foo/src/: main.rs
lambda-foo/: Cargo.toml  deploy.bash
lambda-foo/src/: main.rs
list-intersect/: Cargo.toml  cachegrind.out  libgcc_s.so.1  notes.txt
list-intersect/src/: main.rs
macrofoo/: Cargo.toml
macrofoo/src/: main.rs
minigrep/: Cargo.toml  textfile
minigrep/matcher/: Cargo.toml
minigrep/matcher/src/: lib.rs
minigrep/src/: main.rs
musics/: Cargo.toml
musics/src/: main.rs
pnet-foo/: Cargo.toml
pnet-foo/src/: main.rs
proto-stuff/: Cargo.toml
proto-stuff/src/: main.rs
rand-roulette/: Cargo.toml  main.S  openocd.gdb
rand-roulette/examples/: rng_hal_printrandserial.rs  roulette.rs  roulette_uniform.rs
rand-roulette/src/: lib.rs  main.rs
randplay/: Cargo.toml
randplay/auxiliary/: Cargo.toml
randplay/auxiliary/src/: lib.rs
randplay/src/: main.rs
rust-roaring-bitmap-foo/: Cargo.toml
rust-roaring-bitmap-foo/src/: main.rs
syscall-filtering-foo/: Cargo.toml
syscall-filtering-foo/src/: main.rs
tcp-foo/: Cargo.toml
tcp-foo/src/: main.rs
xdp-bpf-block-udp/: Cargo.toml  README.md
xdp-bpf-block-udp/src/: lib.rs
xdp-bpf-block-udp/src/block_udp/: main.rs  mod.rs
xdp-ebpf-fw/: Cargo.toml  README.md  install.bash
xdp-ebpf-fw/src/: lib.rs
xdp-ebpf-fw/src/fw/: helpers.rs  main.rs  mod.rs
