[package]
name = "benchmarkfoo"
version = "0.1.0"
authors = ["isg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = []

[profile.test]
opt-level = 3