[package]
name = "c-compat-abi-in-rust-for-others"
version = "0.1.0"
authors = ["Ishwor Gurung <me@ishworgurung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.54"

[build-dependencies]
cbindgen = "0.14.3"

[lib]
crate-type = ["cdylib"]
