[package]
name = "rand-roulette"
version = "0.1.0"
authors = ["Ishwor Gurung <me@ishworgurung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
l3gd20 = "0.2.0"
lsm303dlhc = "0.2.0"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.2"
stm32f3="0.8.0"

[dependencies.rand]
default-features = false
version = "0.7.2"
features = ["small_rng"]

[dependencies.rand_chacha]
version = "0.2.1"
default-features = false

[dependencies.stm32f3xx-hal]
version = "0.3.0"
features = ["stm32f303"]

[features]
rt = ["stm32f3xx-hal/rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true