[package]
name = "randplay"
version = "0.1.0"
authors = ["Ishwor Gurung <me@ishworgurung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aux9 = { path = "auxiliary" }
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.2"
#rand = "*"
#rand_chacha = "*"

#[dependencies.rand]
#default-features = false
#version = "0.7.2"
#
#[dependencies.rand_chacha]
#version = "0.2.1"
#default-features = false